Fix curl_cffi version: bump to >=0.8.0 (adds chrome131/133a/136), add profile downgrade fallback

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           pip install --quiet \
-            curl-cffi==0.7.1 \
+            "curl-cffi>=0.8.0" \
             beautifulsoup4==4.12.0 \
             requests==2.31.0
 
